--- a/index.html
+++ b/index.html
@@ -297,7 +297,7 @@
             <div class="company overview">
                 
             <div id="fleming-joffe">
-                <img class="full-width-img" src="images/_DSF3699.jpg" style="margin-top: 50px;">
+                <img class="full-width-img" src="images/edelman-leathers-01.jpg" style="margin-top: 50px;">
                 <p class="caption">This is the image caption, 2006.,<br>Image courtesy of Edelman Archives.</p>
                 <img class="full-width-img" src="images/EDMN_Archive_ArthurTeddy_Portrait-01.jpg">
                 <p class="caption">This is the image caption, 2006.,<br>Image courtesy of Edelman Archives.</p>
