--- a/index.html
+++ b/index.html
@@ -297,11 +297,11 @@
 
                 <div id="halfandhalf">
                     <div id="left-half">
-                        <img src="images/_DSF3580.jpg">
+                        <img src="images/edelman-about-10.jpg">
                         <p class="caption-black">This is the image caption, 2006.,<br>Image courtesy of Edelman Archives.</p>
                         </div>
                         <div id="right-half">
-                        <img src="images/_DSF3575.jpg">
+                        <img src="images/edelman-about-09.jpg">
                         <p class="caption-black">This is the image caption, 2006.,<br>Image courtesy of Edelman Archives.</p>
                         </div>
                 </div>
