--- a/index.html
+++ b/index.html
@@ -394,7 +394,7 @@
 
             <div class="image-scroll-two">
                 <div class="carousel">
-                <img src="images/1956-Fleming Joffe brochure lizard and snakeskins.jpg">
+                <img src="images/edelman-kraft-leather-handbook.png">
                 <p class="carousel-img-caption black">Image Caption.</p>
                 </div>
                 <div>
