--- a/index.html
+++ b/index.html
@@ -453,7 +453,7 @@
                     </div>
                 </div>
 
-                <img class="full-width-img" src="images/CF063939.jpg">
+                <img class="full-width-img" src="images/nb-leather-tannery-2.jpg">
                 <p class="caption-black">This is the image caption, 2006.,<br>Image courtesy of Edelman Archives.</p>
                 <div class="section-header" id="four">
                     <h2>Craft of Leather</h2>
