--- a/index.html
+++ b/index.html
@@ -294,8 +294,10 @@
             
             
             <div class="company overview">
+                <img class="full-width-img" src="images/nb-ilse-campaign-01.jpg">
+                <p class="caption-black">This is the image caption, 2006.,<br>Image courtesy of Edelman Archives.</p>
 
-                <div id="halfandhalf">
+                <div id="halfandhalf" style="margin-top: 0;">
                     <div id="left-half">
                         <img src="images/edelman-about-10.jpg">
                         <p class="caption-black">This is the image caption, 2006.,<br>Image courtesy of Edelman Archives.</p>
@@ -438,7 +440,7 @@
                         It was 1953 and our company, Fleming-Joffe, Ltd., tanned snakes and alligators and lizards into gorgeous colors. But we needed someone to help us define ourselves as the creator of a fashion product, not a commodity. We were looking for a way to building our brand name all over the world; Andy was it! “
                     </p>
 
-                <button id="readmore">Read More</button>
+                <a href="./andy-warhol.html"><button id="readmore">Read More</button></a>
                 </div>
                 </div>
                 <img id="andy-illustration" src="images/water-buffalo.jpg">
@@ -679,8 +681,8 @@ document.addEventListener('scroll', function() {
 
             $('.image-scroll').slick({
   centerMode: true,
-  centerPadding: '20px',
-  slidesToShow: 2,
+  centerPadding: '0px',
+  slidesToShow: 3,
   prevArrow: '<img class="slick-prev" src="./images/icons/prev.svg" style="height:20px;">',
   nextArrow: '<img class="slick-next" src="./images/icons/next.svg" style="height:20px">',
 
@@ -690,8 +692,8 @@ document.addEventListener('scroll', function() {
       settings: {
         arrows: false,
         centerMode: true,
-        centerPadding: '10px',
-        slidesToShow: 3
+        centerPadding: '0px',
+        slidesToShow: 2
       }
     },
     {
@@ -700,7 +702,7 @@ document.addEventListener('scroll', function() {
         arrows: false,
         centerMode: true,
         centerPadding: '10px',
-        slidesToShow: 1
+        slidesToShow: 3
       }
     }
   ]
@@ -708,8 +710,8 @@ document.addEventListener('scroll', function() {
 
 $('.image-scroll-two').slick({
   centerMode: true,
-  centerPadding: '20px',
-  slidesToShow: 2,
+  centerPadding: '0px',
+  slidesToShow: 3,
   prevArrow: '<img class="slick-prev" src="./images/icons/prev-brown.svg" style="height:20px;">',
   nextArrow: '<img class="slick-next" src="./images/icons/next-brown.svg" style="height:20px">',
 
@@ -720,7 +722,7 @@ $('.image-scroll-two').slick({
         arrows: false,
         centerMode: true,
         centerPadding: '10px',
-        slidesToShow: 3
+        slidesToShow: 2
       }
     },
     {
@@ -729,7 +731,7 @@ $('.image-scroll-two').slick({
         arrows: false,
         centerMode: true,
         centerPadding: '10px',
-        slidesToShow: 1
+        slidesToShow: 3
       }
     }
   ]
