--- a/index.html
+++ b/index.html
@@ -517,8 +517,8 @@
                 Ilse Crawford (b. 1962, London ) is a designer, educator, creative director, and founder of Studioilse who lives and works in London. A pioneer of humanistic design, which posits that human needs should guide design for all environments, objects, and experiences, Crawford founded the Design Academy Eindhoven’s department of Man and Wellbeing in 2000 which she led for two decades. With a design approach rooted in a philosophy of wellbeing, sustainability, and materiality, Crawford and her team have worked on projects spanning residential and commercial interiors, hotels, restaurants, community spaces, furniture, products, and brand strategy.
                 <br><br>
                 Drawn to Crawford’s visionary practice and unique material sensibility, Edelman’s design studio invited Crawford to develop fresh color palettes for three quintessential Edelman leathers: Helm, Oath, and Poem.  
- 
             </p>
+            <a href="./andy-warhol.html"><button id="readmore">Read More</button></a>
         </div>
 
         <div id="halfandhalf">
